@@ -1408,12 +1408,21 @@ int calculate_retry_seconds(
   int count)
 
   {
-  int retry_seconds;
+  int retry_seconds = 0;
+
+  /* Why are we using this hand-crafted power function instead of pow()? */
+  /* pow() is probably using a more efficient processor instruction on most
+   * architectures */
 
   retry_seconds = power(STARTING_RETRY_INTERVAL_IN_SECS, count);
 
-  if (retry_seconds > MAX_RETRY_TIME_IN_SECS)
+  /* the (retry_seconds <= 0) condition helps avoid overflow! */
+
+  if ((retry_seconds > MAX_RETRY_TIME_IN_SECS) ||
+      (retry_seconds <= 0))
+    {
     retry_seconds = MAX_RETRY_TIME_IN_SECS;
+    }
 
   return(retry_seconds);
   }
